--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,16 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "target": "es6", // using babel-loader to transpile to es5
-    "module": "esnext", //commonjs destroys 'dynamic imports' which is used for code splitting
+    "target": "es6", 
+    "module": "esnext", 
     "noImplicitAny": false,
     "preserveConstEnums": true,
     "baseUrl": "./app",
     "jsx": "react",
     "lib": ["dom", "es5", "es6", "es7", "es2017",],
-    "allowSyntheticDefaultImports": true, // no errors with commonjs modules interop
+    "allowSyntheticDefaultImports": true, 
     "esModuleInterop": true,
-    "allowJs": true, // include js files
+    "allowJs": true, 
     "declaration": false,
     "types": ["node", "jest", "webpack-env"],
     "typeRoots": ["node_modules/@types"],
@@ -28,9 +28,7 @@
     "strict": true,
     "strictFunctionTypes": false,
     "pretty": true,
-    "removeComments": true,
-    "skipLibCheck": true
-    // ^ Really hate having to do this. This seems to be the only way to get jest + cypress 7.x types working properly
+    "removeComments": true
   },
   "include": [
     "app",
