--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@cypress/react": "^5.3.2",
     "@cypress/webpack-dev-server": "^1.1.2",
     "@emotion/babel-plugin": "^11.3.0",
+    "@emotion/react": "^11.1.5",
     "@hot-loader/react-dom": "17.0.0",
     "@types/node": "13.9.3",
     "@types/react": "^17.0.2",
