--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/polyfill": "7.12.1",
     "@emotion/css": "^11.1.3",
     "@imtbl/design-system": "2.0.1",
+    "axios": "^0.21.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
@@ -55,7 +56,7 @@
     "coveralls": "3.0.11",
     "cross-env": "7.0.2",
     "css-loader": "5.0.1",
-    "cypress": "^7.0.1",
+    "cypress": "^7.1.0",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
