adding e2e test run example start + tweaking mock data

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "scripts": {
     "test:cy:watch": "cypress open-ct --browser electron",
-    "test:cy:run": "cypress run-ct"
+    "test:cy:run": "cypress run-ct",
+    "test:e2e:run": "cypress run",
+    "test:e2e:watch": "cypress open --browser electron"
   },
   "dependencies": {
     "@babel/polyfill": "7.12.1",
