--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "test:cy:watch": "cypress open-ct --browser electron",
     "test:cy:run": "cypress run-ct",
     "test:e2e:run": "cypress run",
-    "test:e2e:watch": "cypress open --browser electron"
+    "test:e2e:watch": "cypress open --browser electron",
+    "start:demo": "webpack serve --config ./internals/webpack/webpack.demo.config.js"
   },
   "dependencies": {
     "@babel/polyfill": "7.12.1",
     "@emotion/css": "^11.1.3",
-    "@imtbl/design-system": "2.0.1",
+    "@imtbl/design-system": "2.2.2",
     "axios": "^0.21.1",
+    "immer": "^9.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "^7.2.3",
     "react-router-dom": "5.2.0",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "redux-saga": "1.1.3",
+    "reselect": "4.0.0",
+    "typed-redux-saga": "^1.3.1",
+    "typesafe-actions": "5.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -100,10 +107,8 @@
     "typescript": "3.9.7",
     "url-loader": "4.1.1",
     "webpack": "^5.1.3",
-    "webpack-cli": "4.4.0",
+    "webpack-cli": "4.5.0",
     "webpack-dev-middleware": "4.1.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-hot-middleware": "2.25.0",
-    "webpack-pwa-manifest": "4.3.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
